[tool.poetry]
name = "pypkgs_tk"
version = "0.1.0"
description = "Python toy package to practice the process of making packages"
authors = ["Trevor Kinsey <trevor_kinsey@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
