[tool.poetry]
name = "pypkgs_tk"
version = "0.1.0"
description = "Python toy package to practice the process of making packages"
authors = ["Trevor Kinsey <trevor_kinsey@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]
Sphinx = "^3.5.1"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
